--- a/styles/style.scss
+++ b/styles/style.scss
@@ -180,7 +180,7 @@ nav {
     left: 50%;
     transform: translate(-50%, -50%);
     width: 30%;
-    height: 60%;
+    // height: 60%;
     border: 1px solid #a878d8;
     border-radius: 15px;
     padding: 10px;
