Completed product detail page wo carousel

--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -1,6 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500&display=swap");
 $montserrat: "Montserrat", sans-serif;
-
+$taffy:#f0d8f0;
+$lavender: #d8a8d8;
+$blosson: #a878d8;
+$orchid: #9060a8;
 
 
 footer {
