--- a/styles/header.css
+++ b/styles/header.css
@@ -208,11 +208,59 @@ nav {
   width: 80%;
 }
 
+.searchcontainermobile {
+  display: none;
+  width: 100%;
+  height: 7vh;
+  margin-top: 2vh;
+  padding: 5px 7px;
+}
+
+.searchcontainermobile .searchmobile {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  border: 1px solid #9060a8;
+  border-radius: 5px;
+}
+
+.searchcontainermobile .searchmobile button {
+  width: 15%;
+  height: 100%;
+  background-color: transparent;
+  outline: none;
+  border: none;
+  text-align: center;
+}
+
+.searchcontainermobile .searchmobile button img {
+  display: block;
+  margin: 0 auto;
+  width: 40%;
+}
+
+.searchcontainermobile .searchmobile input {
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+  border: none;
+  outline: none;
+  float: right;
+  height: 100%;
+  width: 85%;
+  border-radius: 5px;
+  background-color: transparent;
+  color: #9060a8;
+  text-transform: capitalize;
+}
+
 .placeholdercontainer {
   height: 80vh;
 }
 
 @media only screen and (max-width: 480px) {
+  .searchcontainermobile {
+    display: block;
+  }
   nav {
     padding: 10px 20px;
   }
@@ -222,8 +270,8 @@ nav {
   nav .searchcontainer input {
     font-size: 14px;
   }
-  nav .searchcontainer button img {
-    width: 60%;
+  nav .searchcontainer {
+    display: none;
   }
   nav .logo {
     margin-right: 10px;
