--- a/styles/header.scss
+++ b/styles/header.scss
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500&display=swap");
 $montserrat: "Montserrat", sans-serif;
+$taffy:#f0d8f0;
+$lavender: #d8a8d8;
+$blosson: #a878d8;
+$orchid: #9060a8;
 * {
   margin: 0;
   padding: 0;
@@ -161,6 +165,91 @@ nav {
 .cartcontainer img {
   width: 80%;
 }
+
+
+// .searchcontainermobile {
+//   width: 300px;
+//   height: 95%;
+//   background: transparent;
+//   border-radius: 5px;
+//   border: 1px solid #9060a8;
+//   button {
+//     width: 15%;
+//     height: 100%;
+//     background: transparent;
+//     outline: none;
+//     border: none;
+//     cursor: pointer;
+//     // display: flex;
+//     // align-items: center;
+//     // justify-content: center;
+//     text-align: center;
+//     img {
+//       display: block;
+//       margin: 0 auto;
+//       width: 40%;
+//     }
+//   }
+//   input {
+//     font-family: $montserrat;
+//     padding-left: 2px;
+//     font-size: 16px;
+//     border: none;
+//     outline: none;
+//     float: right;
+//     height: 100%;
+//     width: 85%;
+//     background: transparent;
+//     // background: red;
+//     color: black;
+//     border-radius: 5px;
+//   }
+// }
+
+
+.searchcontainermobile{
+  display: none;
+  width: 100%;
+  height: 7vh;
+  margin-top: 2vh;
+  padding:5px 7px;
+  .searchmobile{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    border: 1px solid $orchid;
+    border-radius: 5px;
+    button{
+      width: 15%;
+      height: 100%;
+      background-color: transparent;
+      outline: none;
+      border:none;
+      text-align: center;
+      img{
+        display: block;
+        margin: 0 auto;
+        width: 40%;
+      }
+    }
+    input{
+      font-family: $montserrat;
+      font-size: 16px;
+      border: none;
+      outline: none;
+      float: right;
+      height: 100%;
+      width: 85%;
+      border-radius: 5px;
+      background-color: transparent;
+      color: $orchid;
+      text-transform: capitalize;
+    }
+  }
+}
+
+
+
 // ******************placeholdercontainer
 
 .placeholdercontainer {
@@ -169,6 +258,9 @@ nav {
 
 
 @media only screen and (max-width: 480px) {
+  .searchcontainermobile{
+    display: block;
+  }
     nav {
         padding: 10px 20px;
         .searchcontainer {
@@ -178,11 +270,7 @@ nav {
           }
         }
         .searchcontainer {
-          button {
-            img {
-              width: 60%;
-            }
-          }
+          display: none;
         }
     
         .logo {
