--- a/styles/productlist.css
+++ b/styles/productlist.css
@@ -3,6 +3,12 @@
   width: 100%;
 }
 
+.productlistoutercontainer .listhr {
+  width: 95%;
+  margin: 0 auto;
+  opacity: 0.6;
+}
+
 .productlistoutercontainer .productlistfilter {
   width: 100%;
   padding: 10px;
@@ -42,7 +48,7 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 10px 40px;
+  padding: 10px 10px 10px 100px;
 }
 
 .productlistoutercontainer .listcontainer .innercontainer .imgcontainer {
@@ -66,7 +72,7 @@
 
 .productlistoutercontainer .listcontainer .innercontainer .detailcontainer {
   width: 100%;
-  padding-left: 50px;
+  padding-left: 20px;
 }
 
 .productlistoutercontainer .listcontainer .innercontainer .detailcontainer .productname {
@@ -106,6 +112,17 @@
 .productlistoutercontainer .listcontainer .innercontainer .detailcontainer .pricing .discount {
   font-size: 14px;
   font-weight: 300;
+}
+
+.productlistoutercontainer .listcontainer .innercontainer .detailcontainer .extrainfo {
+  font-family: "Montserrat", sans-serif;
+  margin-top: 10px;
+  list-style-type: none;
+}
+
+.productlistoutercontainer .listcontainer .innercontainer .detailcontainer .extrainfo li {
+  font-size: 14px;
+  margin-top: 5px;
 }
 
 @media only screen and (max-width: 768px) {
@@ -152,6 +169,9 @@
   }
   .productlistoutercontainer .listcontainer .innercontainer .detailcontainer .pricing .discount {
     font-weight: 300;
+    font-size: 12px;
+  }
+  .productlistoutercontainer .listcontainer .innercontainer .detailcontainer .extrainfo li {
     font-size: 12px;
   }
 }
