--- a/styles/header.scss
+++ b/styles/header.scss
@@ -213,6 +213,7 @@ nav {
   height: 7vh;
   margin-top: 2vh;
   padding:5px 7px;
+  overflow: auto;
   .searchmobile{
     width: 100%;
     height: 100%;
