--- a/styles/header.css
+++ b/styles/header.css
@@ -28,6 +28,7 @@ nav {
       -ms-flex-align: center;
           align-items: center;
   height: 8vh;
+  min-height: 60px;
   padding: 10px 50px;
   border-bottom: 1px solid #a878d8;
   -webkit-box-shadow: 1px 1px gray;
@@ -212,8 +213,9 @@ nav {
   display: none;
   width: 100%;
   height: 7vh;
-  margin-top: 2vh;
-  padding: 5px 7px;
+  min-height: 50px;
+  margin-top: 10px;
+  padding: 2px 7px;
   overflow: auto;
 }
 
