--- a/styles/header.scss
+++ b/styles/header.scss
@@ -25,6 +25,7 @@ nav {
   justify-content: space-between;
   align-items: center;
   height: 8vh;
+  min-height:60px;
   // background: #;
   padding: 10px 50px;
   border-bottom: 1px solid #a878d8;
@@ -211,8 +212,9 @@ nav {
   display: none;
   width: 100%;
   height: 7vh;
-  margin-top: 2vh;
-  padding:5px 7px;
+  min-height: 50px;
+  margin-top: 10px;
+  padding:2px 7px;
   overflow: auto;
   .searchmobile{
     width: 100%;
