--- a/styles/loader.css
+++ b/styles/loader.css
@@ -26,20 +26,30 @@ body {
           justify-content: center;
 }
 
-.loadercontianer {
+.loadercontainer {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   z-index: 999;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: #a878d8;
 }
 
-.loadercontianer .lds-ripple {
+.loadercontainer .lds-ripple {
   display: inline-block;
   position: relative;
   width: 80px;
   height: 80px;
 }
 
-.loadercontianer .lds-ripple div {
+.loadercontainer .lds-ripple div {
   position: absolute;
   border: 4px solid #fff;
   opacity: 1;
@@ -48,7 +58,7 @@ body {
           animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
 }
 
-.loadercontianer .lds-ripple div:nth-child(2) {
+.loadercontainer .lds-ripple div:nth-child(2) {
   -webkit-animation-delay: -0.5s;
           animation-delay: -0.5s;
 }
