--- a/styles/loader.scss
+++ b/styles/loader.scss
@@ -22,10 +22,14 @@ body {
   align-items: center;
   justify-content: center;
 }
-.loadercontianer{
+.loadercontainer{
     width: 100%;
-    height: 100%;
+    height: 100vh;
     z-index: 999;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: $blosson;
     .lds-ripple {
         display: inline-block;
         position: relative;
