--- a/styles/forms.scss
+++ b/styles/forms.scss
@@ -89,8 +89,13 @@ $montserrat: "Montserrat", sans-serif;
         font-size: 13px;
         font-weight: 500;
       }
-      .alreadyhaveacc {
+      .alreadyhaveacc{
+        margin-top: 10px;
+      }
+      .privacynotice{
         margin-top: 30px;
+      }
+      .alreadyhaveacc,.privacynotice {
         font-family: $montserrat;
         font-size: 13px;
         font-weight: 400;
