--- a/styles/orderdetail.css
+++ b/styles/orderdetail.css
@@ -23,6 +23,67 @@
   background: #a878d8;
 }
 
+.orderdetailcontainer .container {
+  text-align: center;
+  height: 100px;
+  margin: 80px 0;
+}
+
+.orderdetailcontainer .container .progressbar {
+  counter-reset: step;
+}
+
+.orderdetailcontainer .container .progressbar li {
+  list-style-type: none;
+  float: left;
+  width: 20%;
+  position: relative;
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+  color: #a878d8;
+}
+
+.orderdetailcontainer .container .progressbar li::before {
+  content: counter(step);
+  font-family: "Montserrat", sans-serif;
+  counter-increment: step;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  border: 1px solid #ddd;
+  display: block;
+  text-align: center;
+  margin: 0 auto 10px auto;
+  background-color: white;
+  color: #a878d8;
+}
+
+.orderdetailcontainer .container .progressbar li::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background: #a878d8;
+  top: 15px;
+  left: -50%;
+  z-index: -1;
+}
+
+.orderdetailcontainer .container .progressbar li:first-child:after {
+  content: none;
+}
+
+.orderdetailcontainer .container .progressbar .active {
+  color: #a878d8;
+}
+
+.orderdetailcontainer .container .progressbar .active::before {
+  color: white;
+  border-color: #a878d8;
+  background: #a878d8;
+}
+
 .orderdetailcontainer .orderdetail {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -50,6 +111,19 @@
 .orderdetailcontainer .orderdetail span .status span,
 .orderdetailcontainer .orderdetail span .paymenttype span {
   color: #a878d8;
+}
+
+.orderdetailcontainer .orderdetail span .cancel {
+  padding: 8px 15px;
+  cursor: pointer;
+  border-radius: 5px;
+  background-color: #f45951;
+  border: none;
+  outline: none;
+  margin: 10px;
+  color: #f6f5f4;
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
 }
 
 .orderdetailcontainer .orderdetail .billingdetailcontainer {
@@ -229,6 +303,21 @@
   .orderdetailcontainer .orderdetailhead {
     font-size: 22px;
   }
+  .orderdetailcontainer .container {
+    margin: 40px 0;
+  }
+  .orderdetailcontainer .container .progressbar li {
+    font-size: 12px;
+  }
+  .orderdetailcontainer .container .progressbar li::before {
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+  }
+  .orderdetailcontainer .container .progressbar li::after {
+    top: 15px;
+    height: 1px;
+  }
   .orderdetailcontainer .orderdetail {
     -webkit-box-align: start;
         -ms-flex-align: start;
@@ -240,6 +329,10 @@
   .orderdetailcontainer .orderdetail span .paymenttype {
     font-size: 12px;
     margin: 10px;
+  }
+  .orderdetailcontainer .orderdetail span .cancel {
+    font-size: 12px;
+    padding: 5px 12px;
   }
   .orderdetailcontainer .orderdetail .billingdetailcontainer {
     padding: 7px;
@@ -286,13 +379,29 @@
   }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 480px) {
   .orderdetailcontainer {
     padding: 20px 0px 20px 30px;
   }
   .orderdetailcontainer .orderdetailhead {
     font-size: 20px;
     margin-bottom: 10px;
+  }
+  .orderdetailcontainer .container {
+    margin: 0;
+    padding: 30px 0;
+  }
+  .orderdetailcontainer .container .progressbar li {
+    font-size: 6px;
+  }
+  .orderdetailcontainer .container .progressbar li::before {
+    width: 20px;
+    height: 20px;
+    line-height: 20px;
+  }
+  .orderdetailcontainer .container .progressbar li::after {
+    top: 10px;
+    height: 1px;
   }
   .orderdetailcontainer .orderdetail span .orderid,
   .orderdetailcontainer .orderdetail span .address,
@@ -306,6 +415,9 @@
   .orderdetailcontainer .orderdetail span .status span,
   .orderdetailcontainer .orderdetail span .paymenttype span {
     display: inline-block;
+  }
+  .orderdetailcontainer .orderdetail span .cancel {
+    margin: 7px;
   }
   .orderdetailcontainer .orderdetail .billingdetailcontainer {
     width: 350px;
