--- a/styles/orderdetail.scss
+++ b/styles/orderdetail.scss
@@ -32,6 +32,65 @@ $orchid: #9060a8;
       background: #a878d8;
     }
   }
+  .container {
+    // width: 100%;
+    //  height: 200px;
+    text-align: center;
+    // padding-top: 30px;
+    // margin-top: 40px;
+
+    height: 100px;
+
+    margin: 80px 0;
+    .progressbar {
+      counter-reset: step;
+      li {
+        list-style-type: none;
+        float: left;
+        width: 20%;
+        position: relative;
+        font-family: $montserrat;
+        font-size: 16px;
+        color: $blosson;
+        &::before {
+          content: counter(step);
+          font-family: $montserrat;
+          counter-increment: step;
+          border-radius: 50%;
+          width: 30px;
+          height: 30px;
+          line-height: 30px;
+          border: 1px solid #ddd;
+          display: block;
+          text-align: center;
+          margin: 0 auto 10px auto;
+          background-color: white;
+          color: $blosson;
+        }
+        &::after {
+          content: "";
+          position: absolute;
+          width: 100%;
+          height: 2px;
+          background: $blosson;
+          top: 15px;
+          left: -50%;
+          z-index: -1;
+        }
+      }
+      li:first-child:after {
+        content: none;
+      }
+      .active {
+        color: $blosson;
+        &::before {
+          color: white;
+          border-color: $blosson;
+          background: $blosson;
+        }
+      }
+    }
+  }
   .orderdetail {
     display: flex;
     justify-content: space-between;
@@ -49,10 +108,22 @@ $orchid: #9060a8;
           color: $blosson;
         }
       }
+      .cancel {
+        padding: 8px 15px;
+        cursor: pointer;
+        border-radius: 5px;
+        background-color: #f45951;
+        border: none;
+        outline: none;
+        margin: 10px;
+        color: #f6f5f4;
+        font-family: $montserrat;
+        font-size: 16px;
+      }
     }
     .billingdetailcontainer {
       width: 100%;
-      border: 0.5px solid rgba(0, 0, 0, 0.185) ;
+      border: 0.5px solid rgba(0, 0, 0, 0.185);
       border-radius: 5px;
       padding: 10px;
       width: 300px;
@@ -194,6 +265,25 @@ $orchid: #9060a8;
     .orderdetailhead {
       font-size: 22px;
     }
+
+    .container {
+      margin: 40px 0;
+      .progressbar {
+        li {
+          font-size: 12px;
+          &::before {
+            width: 30px;
+            height: 30px;
+            line-height: 30px;
+          }
+          &::after {
+            top: 15px;
+            height: 1px;
+          }
+        }
+      }
+    }
+
     .orderdetail {
       align-items: flex-start;
 
@@ -204,6 +294,10 @@ $orchid: #9060a8;
         .paymenttype {
           font-size: 12px;
           margin: 10px;
+        }
+        .cancel {
+          font-size: 12px;
+          padding: 5px 12px;
         }
       }
       .billingdetailcontainer {
@@ -256,15 +350,36 @@ $orchid: #9060a8;
   }
 }
 
-// **************** media queries for tabs n ipads
+// **************** media queries for mobile devices
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 480px) {
   .orderdetailcontainer {
     padding: 20px 0px 20px 30px;
     .orderdetailhead {
       font-size: 20px;
       margin-bottom: 10px;
     }
+
+    .container {
+      // margin:40px 80px;
+      margin: 0;
+      padding: 30px 0;
+      .progressbar {
+        li {
+          font-size: 6px;
+          &::before {
+            width: 20px;
+            height: 20px;
+            line-height: 20px;
+          }
+          &::after {
+            top: 10px;
+            height: 1px;
+          }
+        }
+      }
+    }
+
     .orderdetail {
       span {
         .orderid,
@@ -273,9 +388,12 @@ $orchid: #9060a8;
         .paymenttype {
           font-size: 10px;
           margin: 7px;
-          span{
+          span {
             display: inline-block;
           }
+        }
+        .cancel {
+          margin: 7px;
         }
       }
       .billingdetailcontainer {
@@ -285,7 +403,7 @@ $orchid: #9060a8;
           font-weight: 400;
         }
         ul li {
-            font-weight: 400;
+          font-weight: 400;
           font-size: 10px;
           margin-top: 4px;
         }
