--- a/styles/placeorder.scss
+++ b/styles/placeorder.scss
@@ -148,6 +148,47 @@ $orchid: #9060a8;
       ul .totalpayable {
         font-weight: 500;
       }
+      .paymentoption {
+        padding: 10px 0px;
+        p {
+          font-family: $montserrat;
+          font-weight: 500;
+          margin: 5px 0 10px 0;
+          opacity: 0.8;
+          border-bottom: 0.5px solid rgba(0, 0, 0, 0.185);
+          padding-bottom: 4px;
+        }
+        input {
+          padding: 8px 15px;
+          width: 90%;
+          cursor: pointer;
+          border-radius: 5px;
+          border: 1px solid $blosson;
+          background: white;
+          outline: none;
+          margin: 10px auto;
+          color: black;
+          font-family: $montserrat;
+          font-size: 16px;
+          display: block;
+          &:focus,
+          &:hover {
+            background-color: $blosson;
+            color: white;
+          }
+        }
+        .orderwarning{
+            font-family: $montserrat;
+            font-size: 12px;
+            margin: 0 auto;
+            display: block;
+            color: #f45951;
+            a{
+                font-family: $montserrat;
+                text-decoration: none;
+            }
+        }
+      }
     }
   }
 
@@ -309,6 +350,21 @@ $orchid: #9060a8;
         ul li {
           font-size: 12px;
         }
+        .paymentoption {
+          p {
+            margin: 3px 0 5px 0;
+            font-size: 13px;
+            padding-bottom: 2px;
+          }
+          input {
+            font-size: 12px;
+            padding: 5px 12px;
+            width: 90%;
+          }
+          .orderwarning{
+              font-size: 10px;
+          }
+        }
       }
     }
 
@@ -406,6 +462,19 @@ $orchid: #9060a8;
           font-size: 10px;
           margin-top: 4px;
         }
+        .paymentoption {
+          p {
+            font-size: 12px;
+            font-weight: 400;
+          }
+          input{
+              margin: 7px auto;
+              width: 100%;
+          }
+          .orderwarning{
+            font-size: 7px;
+        }
+        }
       }
     }
     .productcontainer {
@@ -448,5 +517,3 @@ $orchid: #9060a8;
     }
   }
 }
-
-
