--- a/styles/header.scss
+++ b/styles/header.scss
@@ -32,14 +32,14 @@ nav {
   box-shadow: 1px 1px gray;
 }
 .logo {
-  width: 8%;
+  width: 10%;
   margin-right: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
   img {
-    margin-top: 10px;
-    width: 100%;
+    // margin-top: 10px;
+    width: 30%;
   }
 }
 .navlinks {
